[gd_scene load_steps=8 format=3 uid="uid://0trdy8gubuly"]

[ext_resource type="Script" uid="uid://s8lgl2losw8y" path="res://pause_menu.gd" id="1_hdmo1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hdmo1"]
bg_color = Color(0.3647059, 0.2509804, 0.21568628, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.24313726, 0.15294118, 0.13725491, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2nc7s"]
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.24313726, 0.15294118, 0.13725491, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d3xb4"]
bg_color = Color(0.4862745, 0.7019608, 0.25882354, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nwcfo"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0.4862745, 0.7019608, 0.25882354, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_05uyy"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.6117647, 0.8, 0.39607844, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p81d2"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.33333334, 0.54509807, 0.18431373, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 100
script = ExtResource("1_hdmo1")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5882353)

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -198.5
offset_top = -233.15875
offset_right = 198.5
offset_bottom = 233.15875
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hdmo1")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Pausado" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "PAUSADO"

[node name="Volume Master" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/slider = SubResource("StyleBoxFlat_2nc7s")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_d3xb4")
max_value = 1.0
step = 0.01
value = 1.0

[node name="ResumeBtn" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_nwcfo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_05uyy")
theme_override_styles/hover = SubResource("StyleBoxFlat_p81d2")
text = "Continuar"

[node name="QuitBtn" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_nwcfo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_05uyy")
theme_override_styles/hover = SubResource("StyleBoxFlat_p81d2")
text = "Sair do Jogo"
